[package]
name = "crossmist"
version = "0.1.0"
authors = ["Alisa Sireneva <imachug@gmail.com>"]
edition = "2021"
description = "Efficient and seamless cross-process communication, both synchronously and asynchronously"
documentation = "https://docs.rs/crossmist"
repository = "https://github.com/purplesyringa/crossmist/"
license = "MIT"
keywords = ["multiprocessing"]
categories = ["asynchronous", "concurrency"]

[dependencies]
ctor = "0.1.22"
lazy_static = "1.4.0"
crossmist-derive = { version = "0.1.0", path = "crossmist-derive" }
paste = "1.0"

[target.'cfg(unix)'.dependencies]
nix = "0.23.1"
tokio = { version = "1", features = ["rt", "macros", "fs", "sync"], optional = true }
tokio-seqpacket = { version = "0.5.4", optional = true }

[target.'cfg(windows)'.dependencies]
tokio = { version = "1", features = ["rt", "macros", "fs", "io-util", "sync"], optional = true }
windows = { version = "0.39.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]}

[dev-dependencies]
anyhow = "1"

[features]
tokio = ["dep:tokio", "dep:tokio-seqpacket"]

[[test]]
name = "sync-main"
path = "tests/main.rs"
harness = false

[[test]]
name = "tokio-main"
path = "tests/tokio.rs"
harness = false
