[package]
name = "crossmist"
version = "1.0.4"
authors = ["Alisa Sireneva <me@purplesyringa.moe>"]
edition = "2021"
description = "Efficient and seamless cross-process communication, both synchronously and asynchronously"
documentation = "https://docs.rs/crossmist"
repository = "https://github.com/purplesyringa/crossmist/"
license = "MIT"
keywords = ["multiprocessing"]
categories = ["asynchronous", "concurrency"]

[dependencies]
async-io = { version = "2", optional = true }
async-fs = { version = "2", optional = true }
crossmist-derive = { version = "=1.0.2", path = "crossmist-derive" }
paste = "1.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs", "process", "sched", "signal", "socket", "uio"] }
tokio = { version = "1", features = ["fs", "macros", "net", "rt", "sync"], optional = true }

[target.'cfg(windows)'.dependencies]
futures-lite = { version = "2", optional = true }
lazy_static = "1.4.0"
tokio = { version = "1", features = ["rt", "macros", "fs", "io-util", "sync"], optional = true }
windows = { version = "0.39.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]}

[dev-dependencies]
anyhow = "1"
ctor = "0.2.8"
macro_rules_attribute = "0.2"
smol = "2"
smol-macros = "0.1"

[features]
tokio = ["dep:tokio"]
smol = ["dep:async-fs", "dep:async-io", "dep:futures-lite"]
nightly = []

[[test]]
name = "sync"
path = "tests/main.rs"

[[test]]
name = "tokio"
path = "tests/tokio.rs"

[[test]]
name = "smol"
path = "tests/smol.rs"

[[test]]
name = "serde"
path = "tests/serde.rs"

[package.metadata.docs.rs]
features = ["tokio", "smol", "nightly"]
