[package]
name = "crossmist-derive"
version = "0.2.4"
authors = ["Alisa Sireneva <me@purplesyringa.moe>"]
edition = "2021"
description = "Efficient and seamless cross-process communication, both synchronously and asynchronously"
documentation = "https://docs.rs/crossmist-derive"
repository = "https://github.com/purplesyringa/crossmist/tree/master/crossmist-derive/"
license = "MIT"
keywords = ["multiprocessing"]
categories = ["asynchronous", "concurrency"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0.89"
quote = "1.0.16"
darling = "0.13.1"
